AUTOMAKE_OPTIONS = foreign

#Put here all the ADARI reports
REPORTFILES = crires_detmon.py crires_echelle_flatfield.py crires_master_dark.py crires_rawdisp.py crires_std_star.py crires_utils.py crires_wavelength.py __init__.py

#This installs the reports in reportsdir directory
reports_DATA = $(REPORTFILES)

EXTRA_DIST = $(REPORTFILES)

