## Process this file with automake to produce Makefile.in

##   This file is part of the CR2RES Pipeline
##   Copyright (C) 2002,2003 European Southern Observatory

##   This library is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published by
##   the Free Software Foundation; either version 2 of the License, or
##   (at your option) any later version.

##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.

##   You should have received a copy of the GNU General Public License
##   along with this program; if not, write to the Free Software
##   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

AUTOMAKE_OPTIONS = 1.8 foreign

DISTCLEANFILES = *~

if MAINTAINER_MODE

MAINTAINERCLEANFILES = Makefile.in

endif

dist_bin_SCRIPTS = cr2res_measure_lines.py cr2res_select_catalogue.py cr2res_show_trace_curv.py cr2res_show_wavecal.py cr2res_wlen_table.py \
                   cr2res_plotsolution.py cr2res_show_spec_catal.py cr2res_show_trace.py cr2res_turbo_colormap.py \
                   cr2res_update_wl.py cr2res_run_setting.sh cr2res_plot_obs2d.py cr2res_plotfpet.py cr2res_makeSOFS.sh \
                   cr2res_plotresiduals.py cr2res_show_raw.py


